@@ -10,6 +10,7 @@ DFHack future
     - locate_ore: scan the map for unmined ore veins
     - multicmd: run a sequence of dfhack commands, separated by ';'
     - autobutcher: A GUI front-end for the autobutcher plugin.
+    - invasionNow: trigger an invasion, or many
   Misc improvements:
     - exterminate: renamed from slayrace, add help message, add butcher mode
     - ruby: add df.dfhack_run "somecommand"
